# OneControl-RV-C-Protocol

./: .gitignore  README.md  pixi.toml  pyproject.toml  requirements.txt
docs/: ANALYSIS.md  PROTOCOL.md
examples/: basic_usage.py  monitor.py
rvc/: __init__.py  client.py  cobs.py  commands.py  decoder.py  device_types.py  dgn.py  lippert_protocol.py  onecontrol.py
tools/: analyze_capture.py  auto_discover.py  comprehensive_test.py  decode_capture.py  decompile_notes.md  device_analyzer.py  devices.json  extract_assemblies.py  identify_device.py  test_toggle.py
tools/decompile/decompiled/Devices/: TcpIp.decompiled.cs
tools/decompile/decompiled/IDS_COBS/: assembly_0087_IDS.Net.csproj
tools/decompile/decompiled/IDS_COBS/IDS.Portable.Common.COBS/: CobsBase.cs  CobsCrcMismatchException.cs  CobsDecoder.cs  CobsEncoder.cs  CobsStream.cs
tools/decompile/decompiled/IDS_COBS/IDS.Portable.Common.Color/: HsvColor.cs  NativeColor.cs  RgbColor.cs
tools/decompile/decompiled/IDS_COBS/IDS.Portable.Common.Manifest/: IMainfestRvConfig.cs  IManifest.cs  IManifestDTC.cs  IManifestDevice.cs  IManifestLogEntry.cs  IManifestLogReceiver.cs  IManifestLogReceiverPlayer.cs  Manifest.cs  (+14 more)
tools/decompile/decompiled/MyRvLink/: assembly_0168_P.csproj
tools/decompile/decompiled/MyRvLinkTcpIp/: d.csproj
tools/decompile/decompiled/OneControlDevices/: assembly_0041.decompiled.cs
tools/decompile/decompiled/OneControlDevices165/: assembly_0165_P.decompiled.cs
tools/decompile/decompiled/Sharp/: Sharp.decompiled.cs
tools/decompile/decompiled/Sharp76/: assembly_0076_Sharp.decompiled.cs
(+348 files in other folders)
