[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onecontrol-rvc"
version = "0.1.0"
description = "Python library for Lippert OneControl RV-C protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
keywords = ["rv", "rv-c", "can-bus", "onecontrol", "lippert", "home-automation"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rvc-monitor = "rvc.client:main"

[project.urls]
Homepage = "https://github.com/manos/OneControl-RV-C-Protocol"
Repository = "https://github.com/manos/OneControl-RV-C-Protocol"
Issues = "https://github.com/manos/OneControl-RV-C-Protocol/issues"

[tool.setuptools.packages.find]
include = ["rvc*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
